[gd_scene load_steps=3 format=3 uid="uid://2ersgc170tw7"]

[ext_resource type="Script" path="res://Mechanics/Building UI/BuildingUI.gd" id="1_uhjne"]
[ext_resource type="AudioStream" uid="uid://c5l0kn58ifxbe" path="res://Sound/sfx/mixkit-wood-hard-hit-2182.ogg" id="2_ulx8a"]

[node name="BuildingUI" type="Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_uhjne")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button0" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Wooden Block"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Wooden beam Horizontal"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Wooden Beam Vertical"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Stone Block"

[node name="Button5" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Stone Beam Horizontal"

[node name="Button6" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Stone Beam Vertical"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ulx8a")
volume_db = -6.0
